# CS386-Project

./: .gitignore  README.md  app.py  databases.py  pyproject.toml  requirements.txt
.github/workflows/: python-package-canary.yml  python-package-dev.yml  python-package-main.yml
Deliverables/: D2Requirements.md  D3.md  D4.md  D5.md  D6.md  D7.md
Deliverables/Submitted/: D1  D2.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
ssts/: __init__.py  db.py  dbClasses.py  dbTests.py  requirements.txt  secrets.js  service.py  ticket.py  wsgi.py
ssts/Testing/: acceptanceTests.py  mockTests.py
ssts/backendDB/: addInfo.py  createDatabases.py  dbClasses.py  dbTests.py  grabInfo.py  updateInfo.py
ssts/static/: styles.css
ssts/static/css/: 404_error.css  form.css  home.css  login.css  settings.css  sidebar.css  view_call.css  view_ticket.css
ssts/static/js/: settings.js  sidebar.js  signup.js  view_tickets.js
ssts/templates/: 404_error.html  base.html  base_home.html  create_incident.html  sidebar.html
ssts/templates/auth/: login.html  signup.html
ssts/templates/edit/: edit_ticket.html
ssts/templates/error/: 404.html
ssts/templates/new/: ticket.html
ssts/templates/service_portal/: portal.html  schedule.html
ssts/templates/settings/: settings.html
ssts/templates/view/: call.html  knowledgebase.html  ticket.html
